# quant-tradings

./: .gitignore  README.md
binance-rs/src/: client.rs
python-trader/: binance-info.py  binance-pepe.py  binance-trader.py
rust-trader/: Cargo.toml  test-secret.json
rust-trader/src/: main.rs  trade_market.rs
rust-trader/src/common/: chart.rs  config.rs  ledger_writer.rs  mod.rs  symbol.rs
