[package]
name = "quantTrade1"
version = "0.1.0"
edition = "2021"
[dependencies]
# binance 库用于与 Binance 交易所的 API 进行交互
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

# serde 库用于序列化和反序列化数据，特别是 JSON 数据
serde = { version = "1.0", features = ["derive"] }

# tokio 库是一个异步运行时，用于处理异步操作
tokio = { version = "1", features = ["full"] }

# reqwest 库是一个 HTTP 客户端，用于发送 HTTP 请求和处理响应
reqwest = { version = "0.11", features = ["json"] }

# ndarray 库用于处理多维数组和矩阵运算
ndarray = "0.15.3"

# nalgebra 库是一个线性代数库，提供矩阵和向量的运算
nalgebra = "0.29.0"

# statrs 库用于统计计算和分布
statrs = "0.15.0"

serde_json = "1.0"
